# computer_graphics_MIPT

./: README.md
1.1/: FragmentShader1.fragmentshader  FragmentShader2.fragmentshader  main.cpp
1.1/comon/: shader.cpp
1.2/: CMakeLists.txt  FragmentShader1.fragmentshader  FragmentShader2.fragmentshader  main.cpp
1.3/: ColorFragmentShader.fragmentshader  tutorial04.cpp
